apps/argocd/httproute/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-ca-issuer
    ingress.cilium.io/force-https: "true"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - argocd.local
      secretName: argocd-tls-cert
  rules:
    - host: argocd.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
